// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScoreBar has custom palette 1`] = `
<div>
  <div
    class="css-pleakc-ScoreBar e1bnnx291"
  >
    <div
      class="css-jzo7rj-Bar e1bnnx290"
      color="purple"
      radius="3"
      size="60"
    />
    <div
      class="css-jzo7rj-Bar e1bnnx290"
      color="purple"
      radius="3"
      size="60"
    />
    <div
      class="css-jzo7rj-Bar e1bnnx290"
      color="purple"
      radius="3"
      size="60"
    />
    <div
      class="css-jzo7rj-Bar e1bnnx290"
      color="purple"
      radius="3"
      size="60"
    />
    <div
      class="css-jzo7rj-Bar e1bnnx290"
      color="purple"
      radius="3"
      size="60"
    />
    <div
      class="css-jzo7rj-Bar e1bnnx290"
      color="purple"
      radius="3"
      size="60"
    />
    <div
      class="css-jzo7rj-Bar e1bnnx290"
      color="purple"
      radius="3"
      size="60"
    />
    <div
      class="css-dtaff8-Bar e1bnnx290"
      radius="3"
      size="60"
    />
  </div>
</div>
`;

exports[`ScoreBar renders 1`] = `
<div>
  <div
    class="css-seu5x-ScoreBar e1bnnx291"
  >
    <div
      class="css-82bx48-Bar e1bnnx290"
      color="#f9a66d"
      radius="3"
      size="60"
    />
    <div
      class="css-82bx48-Bar e1bnnx290"
      color="#f9a66d"
      radius="3"
      size="60"
    />
    <div
      class="css-82bx48-Bar e1bnnx290"
      color="#f9a66d"
      radius="3"
      size="60"
    />
    <div
      class="css-1emfx26-Bar e1bnnx290"
      radius="3"
      size="60"
    />
    <div
      class="css-1emfx26-Bar e1bnnx290"
      radius="3"
      size="60"
    />
  </div>
</div>
`;

exports[`ScoreBar renders vertically 1`] = `
<div>
  <div
    class="css-pleakc-ScoreBar e1bnnx291"
  >
    <div
      class="css-1ez0r6s-Bar e1bnnx290"
      color="#f38259"
      radius="3"
      size="60"
    />
    <div
      class="css-1ez0r6s-Bar e1bnnx290"
      color="#f38259"
      radius="3"
      size="60"
    />
    <div
      class="css-dtaff8-Bar e1bnnx290"
      radius="3"
      size="60"
    />
    <div
      class="css-dtaff8-Bar e1bnnx290"
      radius="3"
      size="60"
    />
    <div
      class="css-dtaff8-Bar e1bnnx290"
      radius="3"
      size="60"
    />
  </div>
</div>
`;

exports[`ScoreBar renders with < 0 score 1`] = `
<div>
  <div
    class="css-seu5x-ScoreBar e1bnnx291"
  >
    <div
      class="css-1emfx26-Bar e1bnnx290"
      radius="3"
      size="60"
    />
    <div
      class="css-1emfx26-Bar e1bnnx290"
      radius="3"
      size="60"
    />
    <div
      class="css-1emfx26-Bar e1bnnx290"
      radius="3"
      size="60"
    />
    <div
      class="css-1emfx26-Bar e1bnnx290"
      radius="3"
      size="60"
    />
    <div
      class="css-1emfx26-Bar e1bnnx290"
      radius="3"
      size="60"
    />
  </div>
</div>
`;

exports[`ScoreBar renders with score = 0 1`] = `
<div>
  <div
    class="css-seu5x-ScoreBar e1bnnx291"
  >
    <div
      class="css-1emfx26-Bar e1bnnx290"
      radius="3"
      size="60"
    />
    <div
      class="css-1emfx26-Bar e1bnnx290"
      radius="3"
      size="60"
    />
    <div
      class="css-1emfx26-Bar e1bnnx290"
      radius="3"
      size="60"
    />
    <div
      class="css-1emfx26-Bar e1bnnx290"
      radius="3"
      size="60"
    />
    <div
      class="css-1emfx26-Bar e1bnnx290"
      radius="3"
      size="60"
    />
  </div>
</div>
`;

exports[`ScoreBar renders with score > max score 1`] = `
<div>
  <div
    class="css-seu5x-ScoreBar e1bnnx291"
  >
    <div
      class="css-1k1el05-Bar e1bnnx290"
      color="#57be8c"
      radius="3"
      size="60"
    />
    <div
      class="css-1k1el05-Bar e1bnnx290"
      color="#57be8c"
      radius="3"
      size="60"
    />
    <div
      class="css-1k1el05-Bar e1bnnx290"
      color="#57be8c"
      radius="3"
      size="60"
    />
    <div
      class="css-1k1el05-Bar e1bnnx290"
      color="#57be8c"
      radius="3"
      size="60"
    />
    <div
      class="css-1k1el05-Bar e1bnnx290"
      color="#57be8c"
      radius="3"
      size="60"
    />
  </div>
</div>
`;
